--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ontology-visualizer",
+	"name": "ontology-visualizer",
 	"displayName": "Ontology Visualizer",
 	"description": "Help user to work with ontologies",
 	"version": "0.0.1",
@@ -11,14 +11,19 @@
 		"Other"
 	],
 	"activationEvents": [
-        "onCommand:ontology-visualizer.helloWorld"
+		"onCommand:ontology-visualizer.openKnownOntology",
+		"onCommand:ontology-visualizer.openKnownOntologyLink"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "ontology-visualizer.helloWorld",
-				"title": "Hello World"
+				"command": "ontology-visualizer.openKnownOntology",
+				"title": "Known Ontology: Open"
+			},
+			{
+				"command": "ontology-visualizer.openKnownOntologyLink",
+				"title": "Known Ontology: Open Link"
 			}
 		]
 	},
@@ -31,16 +36,20 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.61.0",
 		"@types/glob": "^7.1.4",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "14.x",
+		"@types/vscode": "^1.61.0",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
+		"@vscode/test-electron": "^1.6.2",
 		"eslint": "^7.32.0",
 		"glob": "^7.1.7",
 		"mocha": "^9.1.1",
-		"typescript": "^4.4.3",
-		"@vscode/test-electron": "^1.6.2"
+		"typescript": "^4.4.3"
+	},
+	"dependencies": {
+		"axios": "^0.24.0",
+		"open": "^8.4.0"
 	}
 }
