--- a/package.json
+++ b/package.json
@@ -39,8 +39,12 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "yarn run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
+		"compile": "npm-run-all compile:*",
+		"watch": "npm-run-all -p watch:*",
+		"compile:extension": "tsc -p ./",
+		"compile:views": "webpack --mode development",
+		"watch:extension": "tsc -watch -p ./",
+		"watch:views": "webpack --watch --mode development",
 		"pretest": "yarn run compile && yarn run lint",
 		"lint": "eslint src --ext ts",
 		"test": "node ./out/test/runTest.js"
@@ -50,20 +54,32 @@
 		"@types/mocha": "^9.0.0",
 		"@types/n3": "^1.10.3",
 		"@types/node": "14.x",
+		"@types/react": "^17.0.33",
+		"@types/react-dom": "^17.0.10",
 		"@types/vscode": "^1.61.0",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
 		"@vscode/test-electron": "^1.6.2",
+		"css-loader": "^6.5.0",
 		"eslint": "^7.32.0",
 		"glob": "^7.1.7",
 		"mocha": "^9.1.1",
-		"typescript": "^4.4.3"
+		"npm-run-all": "^4.1.5",
+		"style-loader": "^3.3.1",
+		"ts-loader": "^9.2.6",
+		"typescript": "^4.4.3",
+		"webpack": "^5.61.0",
+		"webpack-cli": "^4.9.1"
 	},
 	"dependencies": {
 		"axios": "^0.24.0",
 		"n3": "^1.11.1",
+		"observable-hooks": "^4.1.0",
 		"open": "^8.4.0",
 		"query-string": "^7.0.1",
-		"rdflib": "^2.2.9"
+		"rdflib": "^2.2.9",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"rxjs": "^7.4.0"
 	}
 }
